# context-rag-memory-skills

./: .gitignore  LICENSE  README.md  pyproject.toml
sample_data/series/: monthly_sales.csv
sample_knowledge/time_series/: arima_basics.md  backtesting.md
scripts/: safe_describe_csv.py  safe_series_summary.py
skills/rolling-backtest/: SKILL.md
skills/rolling-backtest/references/: checklist.md
skills/seasonal-diagnostics/: SKILL.md
src/agent_runtime/: api.py  config.py  errors.py  models.py  tracing.py
src/agent_runtime/context/: assembler.py  budget.py  dedup.py  models.py  pruner.py
src/agent_runtime/memory/: condenser.py  models.py  policy.py  sqlite_store.py  working_memory.py
src/agent_runtime/providers/: base.py  fake_provider.py
src/agent_runtime/retrieval/: bm25.py  chunker.py  citations.py  embeddings.py  hybrid.py  models.py  pipeline.py  reranker.py  tokenizer.py  vector_index.py
src/agent_runtime/runtime/: async_executor.py  loop.py  state.py  steps.py
src/agent_runtime/skills/: loader.py  models.py  selector.py
src/agent_runtime/tools/: arithmetic.py  base.py  (+3 more)
tests/: test_api.py  test_async_executor.py  test_bm25.py  test_chunker.py  test_context_budget.py  test_context_integration.py  test_context_pruning.py  test_error_policy.py  test_hybrid_retrieval.py  test_memory_episodic.py  test_memory_policy.py  test_memory_store.py  test_registry.py  test_runtime_loop.py  test_script_runner.py  test_skill_activation.py  test_skill_loader.py  test_trajectory_trace.py  test_validation.py  test_vector_index.py  test_working_memory.py
